# veria-rag

./: .env  README.md  full_pipeline.py  pdf-split.py  prompt.py  pyproject.toml  run.md  temp.json
src/: main.py
src/Application/routers/: document.py
src/Application/services/: DocumentService.py
src/Infrastructure/dbcontext/: context.py
src/Infrastructure/elastic_search/: index.py
src/Infrastructure/embedding_model/: index.py
src/Infrastructure/llm/: index.py  query_function_call.py
src/Infrastructure/minio/: index.py
