[project]
name = "veria"
version = "0.1.0"
description = ""
authors = [
    { name = "Daniel Onuchukwu", email = "114066984+0xfelaback@users.noreply.github.com" },
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "minio (>=7.2.20,<8.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "markitdown[pdf] (>=0.1.6,<0.2.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "llama-index (>=0.14.22,<0.15.0)",
    "llama-index-embeddings-ollama (>=0.9.0,<0.10.0)",
    "llama-index-vector-stores-elasticsearch (>=0.6.0,<0.7.0)",
    "llama-index-llms-ollama (>=0.10.1,<0.11.0)",
    "pipecat-ai[local,ollama,openai,silero] (>=1.4.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
